client/scss/core/_root.scss
* {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  text-overflow: ellipsis;
  text-rendering: optimizeLegibility;

  @media (prefers-reduced-motion: reduce) {
    &,
    &:after,
    &:before {
      animation-duration: 0.0001s !important;
      transition-duration: 0.0001s !important;
    }
  }
}

html,
body,
[data-reactroot] {
  height: 100vh;
  margin: 0;
  padding: 0;
  width: 100vw;
}

html {
  font-size: 10px;
}

body {
  align-content: stretch;
  align-items: stretch;
  display: flex;
  flex-direction: column;
  font-size: 16px;

  .next-wrapper,
  #__next {
    height: 100%;
  }
}

